# oracle-todo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
.codex/agents/: ce-adversarial-document-reviewer.toml  ce-adversarial-reviewer.toml  ce-agent-native-reviewer.toml  ce-ankane-readme-writer.toml  ce-api-contract-reviewer.toml  ce-architecture-strategist.toml  ce-best-practices-researcher.toml  ce-code-simplicity-reviewer.toml  ce-coherence-reviewer.toml  ce-correctness-reviewer.toml  ce-data-integrity-guardian.toml  ce-data-migration-reviewer.toml  ce-deployment-verification-agent.toml  ce-design-implementation-reviewer.toml  ce-design-iterator.toml  ce-design-lens-reviewer.toml  ce-feasibility-reviewer.toml  ce-figma-design-sync.toml  ce-framework-docs-researcher.toml  ce-git-history-analyzer.toml  ce-issue-intelligence-analyst.toml  ce-julik-frontend-races-reviewer.toml  ce-learnings-researcher.toml  ce-maintainability-reviewer.toml  ce-pattern-recognition-specialist.toml  ce-performance-oracle.toml  ce-performance-reviewer.toml  ce-pr-comment-resolver.toml  (+15 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
backend/: Cargo.toml
docs/: design-v1.md  implementation-plan.md  rust-refactor.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts
scripts/: create-mock-db.ps1  create-mock-db.sh  migrate_main_todo_master.py  test-create-mock-db.sh
src/: exports.rs  lib.rs  main.rs
tests/: api_parity.rs  application_policy.rs  cli_parity.rs  e2e.rs  export_parity.rs  integration.rs  logging_errors.rs  python_rust_roundtrip.rs  routine_materialization.rs  sqlite_repository.rs  test_cli_materialization.py  test_engine_core.py  test_routine_materialization.py  test_service.py  unit.rs
todo-engine/: Cargo.toml
(+438 files in other folders)
