[package]
name = "oracle-todo"
version = "0.2.0"
edition = "2024"
description = "Rust rewrite of the policy-enforced Oracle ToDo engine"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
tempfile = "3.15"
