[package]
name = "oracle-todo"
version = "0.2.0"
edition = "2024"
description = "Rust rewrite of the policy-enforced Oracle ToDo engine"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "local-offset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
http = "1"
http-body-util = "0.1"
predicates = "3"
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
