[project]
name = "oracle-todo"
version = "0.1.0"
description = "Policy-enforced personal ToDo engine for Oracle/Hermes workflows"
authors = [
    { name = "shingyusik", email = "paulqwe1018@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
oracle-todo = "oracle_todo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
